add notes links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <nav>
     <a href="manual.html">manual</a>
-    <a href="">notes</a>
+    <a href="notes.html">notes</a>
   </nav>
 
   <h1>MINIMUM VIABLE CAT</h1>
