--- a/manual.html
+++ b/manual.html
@@ -115,7 +115,7 @@ nav {
     <a class='home-link' href="index.html">MINIMUM VIABLE CAT</a>
     <nav>
     <a href="manual.html">manual</a>
-    <a href="">notes</a>
+    <a href="notes.html">notes</a>
   </nav>
 
   <div class="manual-container">
