change 'box' to 'device'

--- a/notes.html
+++ b/notes.html
@@ -197,8 +197,8 @@ nav a {
     <div class="manual-container">
     <div class="manual-spread">
       <img src="assets/rectilinear-box.png" alt="Rectilinear Box" />
-      <div class="caption">A RECTILINEAR BOX THAT PURRS WHEN YOU PET IT.</div>
-      <div class="specs">From the printed manual. [Quarter-fold, 9 spreads, 4¼″ × 5⅝″]</div>
+      <div class="caption">A RECTILINEAR DEVICE THAT PURRS WHEN YOU PET IT.</div>
+      <div class="specs">From the printed manual.</div>
     </div>
   </div>
 
